# bot-block

./: .gitignore  BotBlock.py  LICENSE  README.md  pyproject.toml
botblock/: __init__.py  captcha.py
botblock/fonts/: TungusFonts.txt
fonts/: SIL Open Font License LifeSavers-Bold.txt
