[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "botblock"
version = "2.1.0"
authors = [
    {name = "Priveasy", email = "Admin@Priveasy.org"},
]
description = "A modern, self-hosted, privacy-respecting, CAPTCHA solution"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "BotBlock",
    "bot-block",
    "Bot",
    "Block",
    "CAPTCHA",
    "Spam",
    "Protect",
    "Form",
    "Website",
    "Self-Hosted",
    "Self",
    "Hosted",
    "Privacy",
    "Priveasy",
    "P5vc",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=39.0",
    "importlib-resources>=5.12",
    "Pillow>=9.4",
]

[project.urls]
"Repository" = "https://source.priveasy.org/Priveasy/bot-block"

[tool.setuptools.package-data]
"botblock.fonts" = ["*.ttf", "*.txt"]
